crates/patok-tui/tests/snapshots/ui__explore__explore_empty_project.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 0/0 - 0 left ────────────────────────────────────────────┐
            │no tasks in TASKS.md                                              │
[ Discover ]│                                                                  │
            │                                                                  │
            │ a add tasks · i inject task · Enter run discovery · ↑↓ scroll    │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                  Enter  run discovery  m  menu
