crates/patok-tui/tests/snapshots/ui__explore__explore_needs_queue.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 0/0 - 0 left ────────────────────────────────────────────┐
            │no tasks in TASKS.md                                              │
[   Ship   ]│                                                                  │
[ Discover ]│                                                                  │
            │ a add tasks · i inject task · Enter run discovery · ↑↓ scroll    │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint         Enter  run discovery  ?  settings  t  theme  d  detach
