crates/patok-tui/tests/snapshots/ui__explore__explore_queue_complete.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 2/2 - 0 left ────────────────────────────────────────────┐
            │✔ T1.2  second done                                               │
[ Discover ]│                                                                  │
            │                                                                  │
            │ a add tasks · i inject task · Enter run discovery · ↑↓ scroll    │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                               transient warning
