crates/patok-tui/tests/snapshots/ui__explore__explore_queue_ready.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[ Discover ]│○ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  sprint                                    Enter  start build  m  menu
