crates/patok-tui/tests/snapshots/ui__explore__the_run_mode_chip_follows_the_engine_readout.snap
---
source: crates/patok-tui/tests/ui.rs
expression: screen
---
            ┌ Builder ─────────────────────────────────────────────────────────┐
[ Research ]│no output yet                                                     │
      ↓     │                                                                  │
[   Plan   ]│                                                                  │
      ↓     │                                                                  │
[  Build   ]│                                                                  │
      ↓     └──────────────────────────────────────────────────────────────────┘
[  Review  ]┌ Tasks | 1/3 - 2 left ────────────────────────────────────────────┐
            │✔ T1.1  scaffold the workspace                                    │
[ Discover ]│○ T1.2  add the parser for task files                             │
            │○ T1.3  wire the engine to the shell                              │
            │ a add tasks · i inject task · Enter start build · ↑↓ scroll      │
            └──────────────────────────────────────────────────────────────────┘
 STOPPED  continuous       Enter  start build  ?  settings  t  theme  d  detach
